# Robotics_Project

./: README.md
lane_painting_path_robot/: CMakeLists.txt  package.xml
lane_painting_path_robot/config/: gui.config
lane_painting_path_robot/launch/: robot_launch.py
lane_painting_path_robot/meshes/: paint_plane.dae
lane_painting_path_robot/models/: model.config  robot.sdf
lane_painting_path_robot/src/: ground_painter.cpp  lane_detector_node.cpp  robot_controller_node.cpp
lane_painting_path_robot/urdf/: robot.urdf.xacro
lane_painting_path_robot/worlds/: paint_world.sdf  track_world.sdf
